--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "alphanumerische Zeichen und Bindestriche",
 	"Already have an account?": "Hast du vielleicht schon ein Account?",
 	"an assistant": "ein Assistent",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "und",
 	"and create a new shared link.": "und einen neuen geteilten Link zu erstellen.",
 	"API Base URL": "API Basis URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 Basis URL wird benötigt",
 	"available!": "verfügbar!",
 	"Back": "Zurück",
+	"Back to login": "",
 	"Bad Response": "Schlechte Antwort",
 	"before": "bereits geteilt",
 	"Being lazy": "Faul sein",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Dokument bearbeiten",
 	"Edit User": "Benutzer bearbeiten",
 	"Email": "E-Mail",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -191,7 +194,9 @@
 	"Enter Your Email": "Gib deine E-Mail-Adresse ein",
 	"Enter Your Full Name": "Gib deinen vollständigen Namen ein",
 	"Enter Your Password": "Gib dein Passwort ein",
-	"Enter Your Role": "Gebe deine Rolle ein",
+	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Experimentell",
 	"Export All Chats (All Users)": "Alle Chats exportieren (alle Benutzer)",
 	"Export Chats": "Chats exportieren",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Streamen Sie große externe Antwortblöcke flüssig",
 	"Focus chat input": "Chat-Eingabe fokussieren",
 	"Followed instructions perfectly": "Anweisungen perfekt befolgt",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Formatiere deine Variablen mit eckigen Klammern wie folgt:",
 	"From (Base Model)": "Von (Basismodell)",
 	"Full Screen Mode": "Vollbildmodus",
@@ -324,6 +330,7 @@
 	"Overview": "Übersicht",
 	"Parameters": "Parameter",
 	"Password": "Passwort",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF-Dokument (.pdf)",
 	"PDF Extract Images (OCR)": "Text von Bildern aus PDFs extrahieren (OCR)",
 	"pending": "ausstehend",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Reranking Modell",
 	"Reranking model disabled": "Rranking Modell deaktiviert",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "Vektorspeicher zurücksetzen",
 	"Response AutoCopy to Clipboard": "Antwort automatisch in die Zwischenablage kopieren",
 	"Role": "Rolle",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Eine Nachricht senden",
 	"Send message": "Nachricht senden",
+	"Send Reset Email": "",
 	"September": "September",
 	"Server connection verified": "Serververbindung überprüft",
 	"Set as default": "Als Standard festlegen",
