--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "so alpha, many hyphen",
 	"Already have an account?": "Such account exists?",
 	"an assistant": "such assistant",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "and",
 	"and create a new shared link.": "",
 	"API Base URL": "API Base URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 Base URL is required.",
 	"available!": "available! So excite!",
 	"Back": "Back",
+	"Back to login": "",
 	"Bad Response": "",
 	"before": "",
 	"Being lazy": "",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Edit Doge",
 	"Edit User": "Edit Wowser",
 	"Email": "Email",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Enter Your Full Wow",
 	"Enter Your Password": "Enter Your Barkword",
 	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Much Experiment",
 	"Export All Chats (All Users)": "Export All Chats (All Doggos)",
 	"Export Chats": "Export Barks",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Fluidly wow big chunks",
 	"Focus chat input": "Focus chat bork",
 	"Followed instructions perfectly": "",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Format variables using square brackets like wow:",
 	"From (Base Model)": "From (Base Wow)",
 	"Full Screen Mode": "Much Full Bark Mode",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "Parametos",
 	"Password": "Barkword",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "PDF Extract Wowmages (OCR)",
 	"pending": "pending",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "Reset Vector Storage",
 	"Response AutoCopy to Clipboard": "Copy Bark Auto Bark",
 	"Role": "Role",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Send a Message much message",
 	"Send message": "Send message very send",
+	"Send Reset Email": "",
 	"September": "",
 	"Server connection verified": "Server connection verified much secure",
 	"Set as default": "Set as default very default",
