--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "",
 	"Already have an account?": "",
 	"an assistant": "",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "",
 	"and create a new shared link.": "",
 	"API Base URL": "",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "",
 	"available!": "",
 	"Back": "",
+	"Back to login": "",
 	"Bad Response": "",
 	"before": "",
 	"Being lazy": "",
@@ -163,6 +165,7 @@
 	"Edit Doc": "",
 	"Edit User": "",
 	"Email": "",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "",
 	"Enter Your Password": "",
 	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "",
 	"Export All Chats (All Users)": "",
 	"Export Chats": "",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "",
 	"Focus chat input": "",
 	"Followed instructions perfectly": "",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "",
 	"From (Base Model)": "",
 	"Full Screen Mode": "",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "",
 	"Password": "",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "",
 	"pending": "",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "",
 	"Response AutoCopy to Clipboard": "",
 	"Role": "",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "",
 	"Send message": "",
+	"Send Reset Email": "",
 	"September": "",
 	"Server connection verified": "",
 	"Set as default": "",
