--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "kirjaimia, numeroita ja väliviivoja",
 	"Already have an account?": "Onko sinulla jo tili?",
 	"an assistant": "avustaja",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "ja",
 	"and create a new shared link.": "ja luo uusi jaettu linkki.",
 	"API Base URL": "APIn perus-URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111-perus-URL vaaditaan.",
 	"available!": "saatavilla!",
 	"Back": "Takaisin",
+	"Back to login": "",
 	"Bad Response": "Epäkelpo vastaus",
 	"before": "ennen",
 	"Being lazy": "Oli laiska",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Muokkaa asiakirjaa",
 	"Edit User": "Muokkaa käyttäjää",
 	"Email": "Sähköposti",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Upotusmalli",
 	"Embedding Model Engine": "Upotusmallin moottori",
 	"Embedding model set to \"{{embedding_model}}\"": "\"{{embedding_model}}\" valittu upotusmalliksi",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Syötä koko nimesi",
 	"Enter Your Password": "Syötä salasanasi",
 	"Enter Your Role": "Syötä roolisi",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Kokeellinen",
 	"Export All Chats (All Users)": "Vie kaikki keskustelut (kaikki käyttäjät)",
 	"Export Chats": "Vie keskustelut",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Virtaa suuria ulkoisia vastausosia joustavasti",
 	"Focus chat input": "Fokusoi syöttökenttään",
 	"Followed instructions perfectly": "Noudatti ohjeita täydellisesti",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Muotoile muuttujat hakasulkeilla näin:",
 	"From (Base Model)": "Lähde (perusmalli)",
 	"Full Screen Mode": "Koko näytön tila",
@@ -324,6 +330,7 @@
 	"Overview": "Yleiskatsaus",
 	"Parameters": "Parametrit",
 	"Password": "Salasana",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF-tiedosto (.pdf)",
 	"PDF Extract Images (OCR)": "PDF-tiedoston kuvien erottelu (OCR)",
 	"pending": "odottaa",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Uudelleenpisteytysmalli",
 	"Reranking model disabled": "Uudelleenpisteytysmalli poistettu käytöstä",
 	"Reranking model set to \"{{reranking_model}}\"": "\"{{reranking_model}}\" valittu uudelleenpisteytysmalliksi",
+	"Reset Password": "",
 	"Reset Vector Storage": "Tyhjennä vektorivarasto",
 	"Response AutoCopy to Clipboard": "Vastauksen automaattikopiointi leikepöydälle",
 	"Role": "Rooli",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Lähetä viesti",
 	"Send message": "Lähetä viesti",
+	"Send Reset Email": "",
 	"September": "syyskuu",
 	"Server connection verified": "Palvelinyhteys varmennettu",
 	"Set as default": "Aseta oletukseksi",
