--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "תווים אלפאנומריים ומקפים",
 	"Already have an account?": "כבר יש לך חשבון?",
 	"an assistant": "עוזר",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "וגם",
 	"and create a new shared link.": "וצור קישור משותף חדש.",
 	"API Base URL": "כתובת URL בסיסית ל-API",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "נדרשת כתובת URL בסיסית של AUTOMATIC1111",
 	"available!": "זמין!",
 	"Back": "חזור",
+	"Back to login": "",
 	"Bad Response": "תגובה שגויה",
 	"before": "לפני",
 	"Being lazy": "להיות עצלן",
@@ -163,6 +165,7 @@
 	"Edit Doc": "ערוך מסמך",
 	"Edit User": "ערוך משתמש",
 	"Email": "דוא\"ל",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "מודל הטמעה",
 	"Embedding Model Engine": "מנוע מודל הטמעה",
 	"Embedding model set to \"{{embedding_model}}\"": "מודל ההטמעה הוגדר ל-\"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "הזן את שמך המלא",
 	"Enter Your Password": "הזן את הסיסמה שלך",
 	"Enter Your Role": "הזן את התפקיד שלך",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "ניסיוני",
 	"Export All Chats (All Users)": "ייצוא כל הצ'אטים (כל המשתמשים)",
 	"Export Chats": "ייצוא צ'אטים",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "שידור נתונים חיצוניים בקצב רציף",
 	"Focus chat input": "מיקוד הקלט לצ'אט",
 	"Followed instructions perfectly": "עקב אחר ההוראות במושלמות",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "עצב את המשתנים שלך באמצעות סוגריים מרובעים כך:",
 	"From (Base Model)": "מ (מודל בסיס)",
 	"Full Screen Mode": "מצב מסך מלא",
@@ -324,6 +330,7 @@
 	"Overview": "סקירה כללית",
 	"Parameters": "פרמטרים",
 	"Password": "סיסמה",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "מסמך PDF (.pdf)",
 	"PDF Extract Images (OCR)": "חילוץ תמונות מ-PDF (OCR)",
 	"pending": "ממתין",
@@ -361,6 +368,7 @@
 	"Reranking Model": "מודל דירוג מחדש",
 	"Reranking model disabled": "מודל דירוג מחדש מושבת",
 	"Reranking model set to \"{{reranking_model}}\"": "מודל דירוג מחדש הוגדר ל-\"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "איפוס אחסון וקטורים",
 	"Response AutoCopy to Clipboard": "העתקה אוטומטית של תגובה ללוח",
 	"Role": "תפקיד",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "שלח הודעה",
 	"Send message": "שלח הודעה",
+	"Send Reset Email": "",
 	"September": "ספטמבר",
 	"Server connection verified": "החיבור לשרת אומת",
 	"Set as default": "הגדר כברירת מחדל",
