--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "अल्फ़ान्यूमेरिक वर्ण और हाइफ़न",
 	"Already have an account?": "क्या आपके पास पहले से एक खाता मौजूद है?",
 	"an assistant": "एक सहायक",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "और",
 	"and create a new shared link.": "",
 	"API Base URL": "एपीआई बेस यूआरएल",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 का बेस यूआरएल आवश्यक है।",
 	"available!": "उपलब्ध!",
 	"Back": "पीछे",
+	"Back to login": "",
 	"Bad Response": "ख़राब प्रतिक्रिया",
 	"before": "",
 	"Being lazy": "आलसी होना",
@@ -163,6 +165,7 @@
 	"Edit Doc": "दस्तावेज़ संपादित करें",
 	"Edit User": "यूजर को संपादित करो",
 	"Email": "ईमेल",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "एंबेडिंग मॉडल इंजन",
 	"Embedding model set to \"{{embedding_model}}\"": "एम्बेडिंग मॉडल को \"{{embedding_model}}\" पर सेट किया गया",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "अपना पूरा नाम भरें",
 	"Enter Your Password": "अपना पासवर्ड भरें",
 	"Enter Your Role": "अपनी भूमिका दर्ज करें",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "प्रयोगात्मक",
 	"Export All Chats (All Users)": "सभी चैट निर्यात करें (सभी उपयोगकर्ताओं की)",
 	"Export Chats": "चैट निर्यात करें",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "बड़े बाह्य प्रतिक्रिया खंडों को तरल रूप से प्रवाहित करें",
 	"Focus chat input": "चैट इनपुट पर फ़ोकस करें",
 	"Followed instructions perfectly": "निर्देशों का पूर्णतः पालन किया",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "वर्गाकार कोष्ठकों का उपयोग करके अपने चरों को इस प्रकार प्रारूपित करें :",
 	"From (Base Model)": "(बेस मॉडल) से ",
 	"Full Screen Mode": "पूर्ण स्क्रीन मोड",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "पैरामीटर",
 	"Password": "पासवर्ड",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF दस्तावेज़ (.pdf)",
 	"PDF Extract Images (OCR)": "PDF छवियाँ निकालें (OCR)",
 	"pending": "लंबित",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "पुनर्रैंकिंग मॉडल अक्षम किया गया",
 	"Reranking model set to \"{{reranking_model}}\"": "रीरैंकिंग मॉडल को \"{{reranking_model}}\" पर \u200b\u200bसेट किया गया",
+	"Reset Password": "",
 	"Reset Vector Storage": "वेक्टर संग्रहण रीसेट करें",
 	"Response AutoCopy to Clipboard": "क्लिपबोर्ड पर प्रतिक्रिया ऑटोकॉपी",
 	"Role": "भूमिका",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "एक संदेश भेजो",
 	"Send message": "मेसेज भेजें",
+	"Send Reset Email": "",
 	"September": "",
 	"Server connection verified": "सर्वर कनेक्शन सत्यापित",
 	"Set as default": "डिफाल्ट के रूप में सेट",
