--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "alfanumerički znakovi i crtice",
 	"Already have an account?": "Već imate račun?",
 	"an assistant": "asistent",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "i",
 	"and create a new shared link.": "i stvorite novu dijeljenu vezu.",
 	"API Base URL": "Osnovni URL API-ja",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "Potreban je AUTOMATIC1111 osnovni URL.",
 	"available!": "dostupno!",
 	"Back": "Natrag",
+	"Back to login": "",
 	"Bad Response": "Loš odgovor",
 	"before": "prije",
 	"Being lazy": "Biti lijen",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Uredi dokument",
 	"Edit User": "Uredi korisnika",
 	"Email": "Email",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Umetanje modela",
 	"Embedding Model Engine": "Stroj za umetanje modela",
 	"Embedding model set to \"{{embedding_model}}\"": "Model za umetanje postavljen na \"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Unesite svoje puno ime",
 	"Enter Your Password": "Unesite svoju lozinku",
 	"Enter Your Role": "Unesite svoju ulogu",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Eksperimentalno",
 	"Export All Chats (All Users)": "Izvoz svih razgovora (svi korisnici)",
 	"Export Chats": "Izvoz razgovora",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Glavno strujanje velikih vanjskih dijelova odgovora",
 	"Focus chat input": "Fokusiraj unos razgovora",
 	"Followed instructions perfectly": "Savršeno slijedio upute",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Formatirajte svoje varijable pomoću uglatih zagrada ovako:",
 	"From (Base Model)": "Od (osnovni model)",
 	"Full Screen Mode": "Način cijelog zaslona",
@@ -324,6 +330,7 @@
 	"Overview": "Pregled",
 	"Parameters": "Parametri",
 	"Password": "Lozinka",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF dokument (.pdf)",
 	"PDF Extract Images (OCR)": "PDF izdvajanje slika (OCR)",
 	"pending": "u tijeku",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Model za ponovno rangiranje",
 	"Reranking model disabled": "Model za ponovno rangiranje onemogućen",
 	"Reranking model set to \"{{reranking_model}}\"": "Model za ponovno rangiranje postavljen na \"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "Resetiraj pohranu vektora",
 	"Response AutoCopy to Clipboard": "Automatsko kopiranje odgovora u međuspremnik",
 	"Role": "Uloga",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Pošaljite poruku",
 	"Send message": "Pošalji poruku",
+	"Send Reset Email": "",
 	"September": "Rujan",
 	"Server connection verified": "Veza s poslužiteljem potvrđena",
 	"Set as default": "Postavi kao zadano",
