--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "caratteri alfanumerici e trattini",
 	"Already have an account?": "Hai già un account?",
 	"an assistant": "un assistente",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "e",
 	"and create a new shared link.": "e crea un nuovo link condiviso.",
 	"API Base URL": "URL base API",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "L'URL base AUTOMATIC1111 è obbligatorio.",
 	"available!": "disponibile!",
 	"Back": "Indietro",
+	"Back to login": "",
 	"Bad Response": "Risposta non valida",
 	"before": "prima",
 	"Being lazy": "Essere pigri",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Modifica documento",
 	"Edit User": "Modifica utente",
 	"Email": "Email",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Modello di embedding",
 	"Embedding Model Engine": "Motore del modello di embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modello di embedding impostato su \"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Inserisci il tuo nome completo",
 	"Enter Your Password": "Inserisci la tua password",
 	"Enter Your Role": "Inserisci il tuo ruolo",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Sperimentale",
 	"Export All Chats (All Users)": "Esporta tutte le chat (tutti gli utenti)",
 	"Export Chats": "Esporta chat",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Trasmetti in modo fluido blocchi di risposta esterni di grandi dimensioni",
 	"Focus chat input": "Metti a fuoco l'input della chat",
 	"Followed instructions perfectly": "Ha seguito le istruzioni alla perfezione",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Formatta le tue variabili usando parentesi quadre come questa:",
 	"From (Base Model)": "Da (modello base)",
 	"Full Screen Mode": "Modalità a schermo intero",
@@ -324,6 +330,7 @@
 	"Overview": "Panoramica",
 	"Parameters": "Parametri",
 	"Password": "Password",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "Documento PDF (.pdf)",
 	"PDF Extract Images (OCR)": "Estrazione immagini PDF (OCR)",
 	"pending": "in sospeso",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Modello di riclassificazione",
 	"Reranking model disabled": "Modello di riclassificazione disabilitato",
 	"Reranking model set to \"{{reranking_model}}\"": "Modello di riclassificazione impostato su \"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "Reimposta archivio vettoriale",
 	"Response AutoCopy to Clipboard": "Copia automatica della risposta negli appunti",
 	"Role": "Ruolo",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Invia un messaggio",
 	"Send message": "Invia messaggio",
+	"Send Reset Email": "",
 	"September": "Settembre",
 	"Server connection verified": "Connessione al server verificata",
 	"Set as default": "Imposta come predefinito",
