--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "영문자,숫자 및 하이픈",
 	"Already have an account?": "이미 계정이 있으신가요?",
 	"an assistant": "어시스턴트",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "그리고",
 	"and create a new shared link.": "",
 	"API Base URL": "API 기본 URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 Base URL이 필요합니다.",
 	"available!": "사용 가능!",
 	"Back": "뒤로가기",
+	"Back to login": "",
 	"Bad Response": "",
 	"before": "",
 	"Being lazy": "",
@@ -163,6 +165,7 @@
 	"Edit Doc": "문서 편집",
 	"Edit User": "사용자 편집",
 	"Email": "이메일",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "전체 이름 입력",
 	"Enter Your Password": "비밀번호 입력",
 	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "실험적",
 	"Export All Chats (All Users)": "모든 채팅 내보내기 (모든 사용자)",
 	"Export Chats": "채팅 내보내기",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "대규모 외부 응답 청크를 유동적으로 스트리밍",
 	"Focus chat input": "채팅 입력 포커스",
 	"Followed instructions perfectly": "",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "이렇게 대괄호를 사용하여 변수를 형식화하세요:",
 	"From (Base Model)": "출처(기본 모델)",
 	"Full Screen Mode": "전체 화면 모드",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "매개변수",
 	"Password": "비밀번호",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "PDF에서 이미지 추출 (OCR)",
 	"pending": "보류 중",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "벡터 스토리지 초기화",
 	"Response AutoCopy to Clipboard": "응답 자동 클립보드 복사",
 	"Role": "역할",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "메시지 보내기",
 	"Send message": "메시지 보내기",
+	"Send Reset Email": "",
 	"September": "",
 	"Server connection verified": "서버 연결 확인됨",
 	"Set as default": "기본값으로 설정",
