--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "znaki alfanumeryczne i myślniki",
 	"Already have an account?": "Masz już konto?",
 	"an assistant": "asystent",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "i",
 	"and create a new shared link.": "i utwórz nowy udostępniony link",
 	"API Base URL": "Podstawowy adres URL interfejsu API",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "Podstawowy adres URL AUTOMATIC1111 jest wymagany.",
 	"available!": "dostępny!",
 	"Back": "Wstecz",
+	"Back to login": "",
 	"Bad Response": "Zła odpowiedź",
 	"before": "przed",
 	"Being lazy": "Jest leniwy",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Edytuj dokument",
 	"Edit User": "Edytuj użytkownika",
 	"Email": "Email",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Model osadzania",
 	"Embedding Model Engine": "Silnik modelu osadzania",
 	"Embedding model set to \"{{embedding_model}}\"": "Model osadzania ustawiono na \"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Wprowadź swoje imię i nazwisko",
 	"Enter Your Password": "Wprowadź swoje hasło",
 	"Enter Your Role": "Wprowadź swoją rolę",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Eksperymentalne",
 	"Export All Chats (All Users)": "Eksportuj wszystkie czaty (wszyscy użytkownicy)",
 	"Export Chats": "Eksportuj czaty",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Płynnie przesyłaj strumieniowo duże fragmenty odpowiedzi zewnętrznych",
 	"Focus chat input": "Skoncentruj na czacie",
 	"Followed instructions perfectly": "Postępował z idealnie według instrukcji",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Formatuj swoje zmienne, używając nawiasów kwadratowych, np.",
 	"From (Base Model)": "Z (Model Podstawowy)",
 	"Full Screen Mode": "Tryb pełnoekranowy",
@@ -324,6 +330,7 @@
 	"Overview": "Przegląd",
 	"Parameters": "Parametry",
 	"Password": "Hasło",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "Dokument PDF (.pdf)",
 	"PDF Extract Images (OCR)": "PDF Wyodrębnij obrazy (OCR)",
 	"pending": "oczekujące",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Zmiana rankingu modelu",
 	"Reranking model disabled": "Zmiana rankingu modelu zablokowana",
 	"Reranking model set to \"{{reranking_model}}\"": "Zmiana rankingu modelu ustawiona na \"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "Resetuj przechowywanie wektorów",
 	"Response AutoCopy to Clipboard": "Automatyczne kopiowanie odpowiedzi do schowka",
 	"Role": "Rola",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Wyślij Wiadomość",
 	"Send message": "Wyślij wiadomość",
+	"Send Reset Email": "",
 	"September": "Wrzesień",
 	"Server connection verified": "Połączenie z serwerem zweryfikowane",
 	"Set as default": "Ustaw jako domyślne",
