--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "алфанумерички знакови и цртице",
 	"Already have an account?": "Већ имате налог?",
 	"an assistant": "помоћник",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "и",
 	"and create a new shared link.": "и направи нову дељену везу.",
 	"API Base URL": "Основна адреса API-ја",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "Потребна је основна адреса за AUTOMATIC1111.",
 	"available!": "доступно!",
 	"Back": "Назад",
+	"Back to login": "",
 	"Bad Response": "Лош одговор",
 	"before": "пре",
 	"Being lazy": "Бити лењ",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Уреди документ",
 	"Edit User": "Уреди корисника",
 	"Email": "Е-пошта",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Модел уградње",
 	"Embedding Model Engine": "Мотор модела уградње",
 	"Embedding model set to \"{{embedding_model}}\"": "Модел уградње подешен на \"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Унесите ваше име и презиме",
 	"Enter Your Password": "Унесите вашу лозинку",
 	"Enter Your Role": "Унесите вашу улогу",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Експериментално",
 	"Export All Chats (All Users)": "Извези сва ћаскања (сви корисници)",
 	"Export Chats": "Извези ћаскања",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Течно стримујте велике спољне делове одговора",
 	"Focus chat input": "Усредсредите унос ћаскања",
 	"Followed instructions perfectly": "Упутства су савршено праћена",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Форматирајте ваше променљиве користећи угластe заграде овако:",
 	"From (Base Model)": "Од (основни модел)",
 	"Full Screen Mode": "Режим целог екрана",
@@ -324,6 +330,7 @@
 	"Overview": "Преглед",
 	"Parameters": "Параметри",
 	"Password": "Лозинка",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF документ (.pdf)",
 	"PDF Extract Images (OCR)": "Извлачење PDF слика (OCR)",
 	"pending": "на чекању",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Модел поновног рангирања",
 	"Reranking model disabled": "Модел поновног рангирања онемогућен",
 	"Reranking model set to \"{{reranking_model}}\"": "Модел поновног рангирања подешен на \"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "Ресетуј складиште вектора",
 	"Response AutoCopy to Clipboard": "Самостално копирање одговора у оставу",
 	"Role": "Улога",
@@ -388,6 +396,7 @@
 	"Send": "Пошаљи",
 	"Send a Message": "Пошаљи поруку",
 	"Send message": "Пошаљи поруку",
+	"Send Reset Email": "",
 	"September": "Септембар",
 	"Server connection verified": "Веза са сервером потврђена",
 	"Set as default": "Подеси као подразумевано",
