--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "alfanumerik karakterler ve tireler",
 	"Already have an account?": "Zaten bir hesabınız mı var?",
 	"an assistant": "bir asistan",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "ve",
 	"and create a new shared link.": "ve yeni bir paylaşılan bağlantı oluşturun.",
 	"API Base URL": "API Temel URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 Temel URL gereklidir.",
 	"available!": "mevcut!",
 	"Back": "Geri",
+	"Back to login": "",
 	"Bad Response": "Kötü Yanıt",
 	"before": "önce",
 	"Being lazy": "Tembelleşiyor",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Belgeyi Düzenle",
 	"Edit User": "Kullanıcıyı Düzenle",
 	"Email": "E-posta",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Gömme Modeli",
 	"Embedding Model Engine": "Gömme Modeli Motoru",
 	"Embedding model set to \"{{embedding_model}}\"": "Gömme modeli \"{{embedding_model}}\" olarak ayarlandı",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Tam Adınızı Girin",
 	"Enter Your Password": "Parolanızı Girin",
 	"Enter Your Role": "Rolünüzü Girin",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Deneysel",
 	"Export All Chats (All Users)": "Tüm Sohbetleri Dışa Aktar (Tüm Kullanıcılar)",
 	"Export Chats": "Sohbetleri Dışa Aktar",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Büyük harici yanıt chunklarını akıcı bir şekilde yayınlayın",
 	"Focus chat input": "Sohbet girişine odaklan",
 	"Followed instructions perfectly": "Talimatları mükemmel şekilde takip etti",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Değişkenlerinizi şu şekilde kare parantezlerle biçimlendirin:",
 	"From (Base Model)": "(Temel Model)'den",
 	"Full Screen Mode": "Tam Ekran Modu",
@@ -324,6 +330,7 @@
 	"Overview": "Genel Bakış",
 	"Parameters": "Parametreler",
 	"Password": "Parola",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF belgesi (.pdf)",
 	"PDF Extract Images (OCR)": "PDF Görüntülerini Çıkart (OCR)",
 	"pending": "beklemede",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Yeniden Sıralama Modeli",
 	"Reranking model disabled": "Yeniden sıralama modeli devre dışı bırakıldı",
 	"Reranking model set to \"{{reranking_model}}\"": "Yeniden sıralama modeli \"{{reranking_model}}\" olarak ayarlandı",
+	"Reset Password": "",
 	"Reset Vector Storage": "Vektör Depolamayı Sıfırla",
 	"Response AutoCopy to Clipboard": "Yanıtı Panoya Otomatik Kopyala",
 	"Role": "Rol",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Bir Mesaj Gönder",
 	"Send message": "Mesaj gönder",
+	"Send Reset Email": "",
 	"September": "Eylül",
 	"Server connection verified": "Sunucu bağlantısı doğrulandı",
 	"Set as default": "Varsayılan olarak ayarla",
