--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "алфавітно-цифрові символи та дефіси",
 	"Already have an account?": "Вже є обліковий запис?",
 	"an assistant": "асистента",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "та",
 	"and create a new shared link.": "і створіть нове спільне посилання.",
 	"API Base URL": "URL-адреса API",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "Необхідна URL-адреса AUTOMATIC1111.",
 	"available!": "доступно!",
 	"Back": "Назад",
+	"Back to login": "",
 	"Bad Response": "Неправильна відповідь",
 	"before": "до того, як",
 	"Being lazy": "Не поспішати",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Редагувати документ",
 	"Edit User": "Редагувати користувача",
 	"Email": "Електронна пошта",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "Модель вбудовування",
 	"Embedding Model Engine": "Двигун модели встраивания ",
 	"Embedding model set to \"{{embedding_model}}\"": "Встановлена модель вбудовування \"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Введіть ваше ім'я",
 	"Enter Your Password": "Введіть ваш пароль",
 	"Enter Your Role": "Введіть вашу роль",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Експериментальне",
 	"Export All Chats (All Users)": "Експортувати всі чати (всі користувачі)",
 	"Export Chats": "Експортувати чати",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Плавно передавати великі фрагменти зовнішніх відповідей",
 	"Focus chat input": "Фокус вводу чату",
 	"Followed instructions perfectly": "Бездоганно дотримувався інструкцій",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Форматуйте свої змінні квадратними дужками так:",
 	"From (Base Model)": "Від (базова модель)",
 	"Full Screen Mode": "Режим повного екрану",
@@ -324,6 +330,7 @@
 	"Overview": "Огляд",
 	"Parameters": "Параметри",
 	"Password": "Пароль",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF документ (.pdf)",
 	"PDF Extract Images (OCR)": "Розпізнавання зображень з PDF (OCR)",
 	"pending": "на розгляді",
@@ -361,6 +368,7 @@
 	"Reranking Model": "Модель переранжування",
 	"Reranking model disabled": "Модель переранжування вимкнена",
 	"Reranking model set to \"{{reranking_model}}\"": "Модель переранжування встановлено на \"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "Скинути векторне сховище",
 	"Response AutoCopy to Clipboard": "Автокопіювання відповіді в буфер обміну",
 	"Role": "Роль",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Надіслати повідомлення",
 	"Send message": "Надіслати повідомлення",
+	"Send Reset Email": "",
 	"September": "Вересень",
 	"Server connection verified": "З'єднання з сервером підтверджено",
 	"Set as default": "Встановити за замовчуванням",
