--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "字母数字字符和连字符",
 	"Already have an account?": "已经有账户了吗？",
 	"an assistant": "助手",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "和",
 	"and create a new shared link.": "创建一个新的共享链接。",
 	"API Base URL": "API 基础 URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "需要 AUTOMATIC1111 基础 URL。",
 	"available!": "可用！",
 	"Back": "返回",
+	"Back to login": "",
 	"Bad Response": "不良响应",
 	"before": "之前",
 	"Being lazy": "懒惰",
@@ -163,6 +165,7 @@
 	"Edit Doc": "编辑文档",
 	"Edit User": "编辑用户",
 	"Email": "电子邮件",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "嵌入模型",
 	"Embedding Model Engine": "嵌入模型引擎",
 	"Embedding model set to \"{{embedding_model}}\"": "嵌入模型设置为 \"{{embedding_model}}\"",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "输入您的全名",
 	"Enter Your Password": "输入您的密码",
 	"Enter Your Role": "输入您的角色",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "实验性",
 	"Export All Chats (All Users)": "导出所有聊天（所有用户）",
 	"Export Chats": "导出聊天",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "流畅地传输大型外部响应块",
 	"Focus chat input": "聚焦聊天输入",
 	"Followed instructions perfectly": "完全遵循说明",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "使用这样的方括号格式化你的变量：",
 	"From (Base Model)": "来自（基础模型）",
 	"Full Screen Mode": "全屏模式",
@@ -324,6 +330,7 @@
 	"Overview": "概述",
 	"Parameters": "参数",
 	"Password": "密码",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "PDF 文档 (.pdf)",
 	"PDF Extract Images (OCR)": "PDF 图像处理 (使用 OCR)",
 	"pending": "待定",
@@ -361,6 +368,7 @@
 	"Reranking Model": "重排模型",
 	"Reranking model disabled": "重排模型已禁用",
 	"Reranking model set to \"{{reranking_model}}\"": "重排模型设置为 \"{{reranking_model}}\"",
+	"Reset Password": "",
 	"Reset Vector Storage": "重置向量存储",
 	"Response AutoCopy to Clipboard": "自动复制回答到剪贴板",
 	"Role": "角色",
@@ -388,6 +396,7 @@
 	"Send": "发送",
 	"Send a Message": "发送消息",
 	"Send message": "发送消息",
+	"Send Reset Email": "",
 	"September": "九月",
 	"Server connection verified": "已验证服务器连接",
 	"Set as default": "设为默认",
