--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "алфанумерични знаци и тире",
 	"Already have an account?": "Вече имате акаунт? ",
 	"an assistant": "асистент",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "и",
 	"and create a new shared link.": "",
 	"API Base URL": "API Базов URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 Базов URL е задължителен.",
 	"available!": "наличен!",
 	"Back": "Назад",
+	"Back to login": "",
 	"Bad Response": "",
 	"before": "",
 	"Being lazy": "",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Редактиране на документ",
 	"Edit User": "Редактиране на потребител",
 	"Email": "Имейл",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Въведете вашето пълно име",
 	"Enter Your Password": "Въведете вашата парола",
 	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Експериментално",
 	"Export All Chats (All Users)": "Експортване на всички чатове (За всички потребители)",
 	"Export Chats": "Експортване на чатове",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Плавно предаване на големи части от външен отговор",
 	"Focus chat input": "Фокусиране на чат вход",
 	"Followed instructions perfectly": "",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Форматирайте вашите променливи, като използвате квадратни скоби, както следва:",
 	"From (Base Model)": "От (Базов модел)",
 	"Full Screen Mode": "На Цял екран",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "Параметри",
 	"Password": "Парола",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "PDF Extract Images (OCR)",
 	"pending": "в очакване",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "Ресет Vector Storage",
 	"Response AutoCopy to Clipboard": "Аувтоматично копиране на отговор в клипборда",
 	"Role": "Роля",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Изпращане на Съобщение",
 	"Send message": "Изпращане на съобщение",
+	"Send Reset Email": "",
 	"September": "",
 	"Server connection verified": "Server connection verified",
 	"Set as default": "Задай по подразбиране",
