--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "alfanumeriska tecken och bindestreck",
 	"Already have an account?": "Har du redan ett konto?",
 	"an assistant": "en assistent",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "och",
 	"and create a new shared link.": "",
 	"API Base URL": "API-bas-URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 bas-URL krävs.",
 	"available!": "tillgänglig!",
 	"Back": "Tillbaka",
+	"Back to login": "",
 	"Bad Response": "",
 	"before": "",
 	"Being lazy": "",
@@ -163,6 +165,7 @@
 	"Edit Doc": "Redigera dokument",
 	"Edit User": "Redigera användare",
 	"Email": "E-post",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "Ange ditt fullständiga namn",
 	"Enter Your Password": "Ange ditt lösenord",
 	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "Experimentell",
 	"Export All Chats (All Users)": "Exportera alla chattar (alla användare)",
 	"Export Chats": "Exportera chattar",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "Flytande ström stora externa svarsblock",
 	"Focus chat input": "Fokusera chattindata",
 	"Followed instructions perfectly": "",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "Formatera dina variabler med hakparenteser så här:",
 	"From (Base Model)": "Från (basmodell)",
 	"Full Screen Mode": "Helskärmsläge",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "Parametrar",
 	"Password": "Lösenord",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "PDF Extrahera bilder (OCR)",
 	"pending": "väntande",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "Återställ vektorlager",
 	"Response AutoCopy to Clipboard": "Svara AutoCopy till urklipp",
 	"Role": "Roll",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "Skicka ett meddelande",
 	"Send message": "Skicka meddelande",
+	"Send Reset Email": "",
 	"September": "",
 	"Server connection verified": "Serveranslutning verifierad",
 	"Set as default": "Ange som standard",
