--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -37,6 +37,7 @@
 	"alphanumeric characters and hyphens": "英文字母、數字（0~9）和連字符（-）",
 	"Already have an account?": "已經有帳號了嗎？",
 	"an assistant": "助手",
+	"An email has been sent to your email address with further instructions.": "",
 	"and": "和",
 	"and create a new shared link.": "",
 	"API Base URL": "API 基本 URL",
@@ -59,6 +60,7 @@
 	"AUTOMATIC1111 Base URL is required.": "需要 AUTOMATIC1111 基本 URL",
 	"available!": "可以使用！",
 	"Back": "返回",
+	"Back to login": "",
 	"Bad Response": "",
 	"before": "",
 	"Being lazy": "",
@@ -163,6 +165,7 @@
 	"Edit Doc": "編輯文件",
 	"Edit User": "編輯使用者",
 	"Email": "電子郵件",
+	"Email service is not properly configured. Please contact support.": "",
 	"Embedding Model": "",
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
@@ -192,6 +195,8 @@
 	"Enter Your Full Name": "輸入你的全名",
 	"Enter Your Password": "輸入你的密碼",
 	"Enter Your Role": "",
+	"Error": "",
+	"Error: Password reset link is invalid or has expired.": "",
 	"Experimental": "實驗功能",
 	"Export All Chats (All Users)": "匯出所有聊天紀錄（所有使用者）",
 	"Export Chats": "匯出聊天紀錄",
@@ -208,6 +213,7 @@
 	"Fluidly stream large external response chunks": "流暢地傳輸大型外部響應區塊",
 	"Focus chat input": "聚焦聊天輸入框",
 	"Followed instructions perfectly": "",
+	"Forgot your password?": "",
 	"Format your variables using square brackets like this:": "像這樣使用方括號來格式化你的變數：",
 	"From (Base Model)": "來自（基礎模型）",
 	"Full Screen Mode": "全螢幕模式",
@@ -324,6 +330,7 @@
 	"Overview": "",
 	"Parameters": "參數",
 	"Password": "密碼",
+	"Password changed successfully.": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "PDF 圖像擷取（OCR 光學文字辨識）",
 	"pending": "待審查",
@@ -361,6 +368,7 @@
 	"Reranking Model": "",
 	"Reranking model disabled": "",
 	"Reranking model set to \"{{reranking_model}}\"": "",
+	"Reset Password": "",
 	"Reset Vector Storage": "重置向量儲存空間",
 	"Response AutoCopy to Clipboard": "自動複製回答到剪貼簿",
 	"Role": "Role",
@@ -388,6 +396,7 @@
 	"Send": "",
 	"Send a Message": "傳送訊息",
 	"Send message": "傳送訊息",
+	"Send Reset Email": "",
 	"September": "九月",
 	"Server connection verified": "已驗證伺服器連線",
 	"Set as default": "設為預設",
